--- a/framework7/feed/framework7.feeds.css
+++ b/framework7/feed/framework7.feeds.css
@@ -14,8 +14,19 @@
  */
 .feeds-page .content-block img {
   max-width: 100%;
-  height: auto;
+  height: auto;  
 }
+.content-block-inner {
+	text-align:justify;
+}	
+
+.external {
+	font-size:1.4em;
+}
+.back {
+	color:white;
+}
+
 .item-content {
 	font-size:medium;
 	white-space:normal !important;
@@ -24,10 +35,14 @@
 }
 .item-title {
 	white-space: normal !important;
+	text-align:justify;
 }
 .item-title img {
 	float:left;
-	padding-right:0.6em;	
+	padding-right:0.6em;
+	width:100%;
+	height:auto;
+	max-width:360px;	
 }
 
 .feeds-item-link {
