--- a/framework7/feed/framework7.feeds.css
+++ b/framework7/feed/framework7.feeds.css
@@ -38,9 +38,9 @@
 	padding: 0px 5px;
 }
 .feed_title {
-	font-family: 'Capture it', arial;
-	text-shadow: 3px 3px 3px #aaa;
-	font-size: large;
+	font-family: 'NeoSansProBold', arial;
+	text-shadow: 2px 2px 2px #aaa;
+	font-size:large;
 	width: 100%;
 	padding: 0.3em;
 	margin:0.1em;
