--- a/res/xml/config.xml
+++ b/res/xml/config.xml
@@ -1,3 +1,3 @@
-﻿<feature name="InAppBrowser">
-    <param name="android-package" value="org.apache.cordova.inappbrowser.InAppBrowser" />
+﻿<feature name="cordova-plugin-InAppBrowser">
+    <param name="android-package" spec="1.5.0" value="org.apache.cordova.inappbrowser.InAppBrowser" />
 </feature>
